@@ -46,8 +46,3 @@ tasks.matching {
 }.configureEach {
     dependsOn("kspAndroidHostTest")
 }
-
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
-}
