@@ -153,15 +153,6 @@ dependencies {
     testRuntimeOnly(libs.junit.platform.launcher)
 }
 
-tasks.withType<org.gradle.api.tasks.testing.Test>().configureEach {
-    jvmArgs(
-        "-Xshare:off",
-        "--enable-native-access=ALL-UNNAMED",
-        "--sun-misc-unsafe-memory-access=allow",
-        "-XX:+EnableDynamicAgentLoading",
-    )
-    useJUnitPlatform()
-}
 
 extensions.configure<LibraryAndroidComponentsExtension> {
     onVariants { variant ->
